updated product view related data content as method - need revision updated login modal refreshing page onclose updated layout of productview page carousel component update modal component update

--- a/LojaVirtual.csproj
+++ b/LojaVirtual.csproj
@@ -27,6 +27,11 @@
     <Folder Include="Pages\User\Shared\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MecaDevRazorComponents\MecaDevRazorComponents.csproj" />
+    <ProjectReference Include="..\MecaDevToolkit\MecaDevToolkit.csproj" />
+  </ItemGroup>
+
 
 
 </Project>
